syntax = "proto3";

import "type.proto";

message File {
  string name = 1;
  string content = 2;
}

message AlphaDAGRequest {
  bool warning_as_error = 1;
  bool with_tables = 2;
  bool with_functions = 3;
  bool side_effect_first = 4;
  repeated File files = 5;
}

message AlphaDAGResponse {
  repeated string external_required_tables = 1;
  repeated string dag_dot_string = 2;
  optional string error = 3;
}

enum SupportedType {
  STRING = 0;
  INTEGER = 1;
  INT64 = 2;
  BOOLEAN = 3;
  BOOL = 4;
  FLOAT64 = 5;
  FLOAT = 6;
  NUMERIC = 7;
  BYTES = 8;
  TIMESTAMP = 9;
  TIME = 10;
  DATETIME = 11;
  DATE = 12;
  GEOGRAPHY = 13;
  RECORD = 14;
}

enum Mode {
  REPEATED = 0;
  NULLABLE = 1;
  REQUIRED = 2;
}

/* import "google/protobuf/any.proto"; */

message Column {
  string name = 1;
  SupportedType type = 2;
  Mode mode = 3;
  // For record types
  repeated Column fields = 4;
  /* optional string description = 6; */
  /* optional google.protobuf.Any policyTags = 7; */
}

message ZetaSQLColumn {
  string name = 1;
  zetasql.TypeProto zetasql_type = 2;
}

message GenericColumn {
  oneof column {
    Column columns = 2;
    ZetaSQLColumn zetasql_columns = 3;
  }
}


message TableSchema {
  string table_name = 1;
  repeated GenericColumn columns = 2;
}

message AlphaCheckRequest {
  repeated TableSchema external_required_tables_schema = 1;
  string dag_dot_string = 2;
  repeated File files = 3;
}

message AlphaCheckResponse {
  optional string error = 1;
}

service AlphaSQL {
  // Extract DAG from SQL files
  rpc AlphaDAG(AlphaDAGRequest)
    returns (AlphaDAGResponse) {}

  // Validate DAG
  rpc AlphaCheck(AlphaCheckRequest)
    returns (AlphaCheckResponse) {}
}
